--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 <center>
     <h1>Hello World!</h1>
     <p>This is my first HTML page.</p>
+    <img src="/images/test.png" alt="image" style="width:500px;height:500px;">
  </center>
  </html>
+
