--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <html>
+<style>body {font-family: "Comic Sans MS", "Comic Sans", cursive;}</style>
 <head>
-    <title>Hello World Page</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.container {
+  position: relative;
+  text-align: center;
+  color: black;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -110%);
+}
+</style>
 </head>
-<center>
-    <h1>Hello World!</h1>
-    <p>This is my first HTML page.</p>
-    <img src="/images/test.png" alt="image" style="width:500px;height:500px;">
- </center>
- </html>
 
+<head>
+<div class="container">
+  <img src="/images/rainbow.gif" alt="image" style="width:2000px;height:100px;">
+  <h1 class="centered">Chalked and Loaded</h1>
+</div>
+</head>
+
+<center>
+<style>h1 {text-decoration: underline;}</style>
+
+<h2>Yea so basically heres a bunch of stuff!</h2>
+
+<a href="/html/mastertimeline.html">
+	<img src="/images/bhole.gif" alt="logo" style="width:500px;height:500px;">
+</a>
+<h2>Into the Void: "The Master Timeline"</h2>
+
+<a href="/html/azcrags.html">
+	<img src="/images/azmap.png" alt="logo" style="width:500px;height:500px;">
+</a>
+<h2>Click Here! for Climbing stuff</h2>
+
+
+
+ 
+
+
+
+
+</center>
+ </html>
