--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </a>
 <h2>Into the Void: "The Master Timeline"</h2>
 
-<a href="/html/azcrags.html">
-	<img src="/images/azmap.png" alt="logo" style="width:500px;height:500px;">
+<a href="/html/climbing.html">
+	<img src="/images/test.png" alt="logo" style="width:500px;height:500px;">
 </a>
 <h2>Click Here! for Climbing stuff</h2>
 
@@ -48,3 +48,4 @@
 
 </center>
  </html>
+
