--- a/html/climbing.html
+++ b/html/climbing.html
@@ -3,7 +3,7 @@
 
 <center>
 
-<h1>Welcome to The Arizona Crags Page</h1>
+<h1>Welcome to The Climbing Page</h1>
 <style>h1 {text-decoration: underline;}</style>
 
 
@@ -13,4 +13,5 @@
 
 
 </center>
+
  </html>
