--- a/html/climbing.html
+++ b/html/climbing.html
@@ -6,7 +6,10 @@
 <h1>Welcome to The Climbing Page</h1>
 <style>h1 {text-decoration: underline;}</style>
 
-
+<a href="/html/azcrags.html">
+	<img src="/images/azmap.png" alt="logo" style="width:500px;height:500px;">
+</a>
+<h2>Click Here! for Arizona Climbing Crags</h2>
  
 
 
@@ -15,3 +18,4 @@
 </center>
 
  </html>
+
