--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h2>Into the Void: "The Master Timeline"</h2>
 
 <a href="/html/climbing.html">
-	<img src="/images/test.png" alt="logo" style="width:500px;height:500px;">
+	<img src="/images/climbicon.PNG" alt="logo" style="width:500px;height:500px;">
 </a>
 <h2>Click Here! for Climbing stuff</h2>
 
@@ -48,4 +48,5 @@
 
 </center>
  </html>
+
 
