--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-<style>body {font-family: "Comic Sans MS", "Comic Sans", cursive;}</style>
+
+<style>body {font-family: "Comic Sans MS", "Comic Sans";}</style>
 <head>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .container {
@@ -21,11 +23,11 @@
 <div class="container">
   <img src="/images/rainbow.gif" alt="image" style="width:2000px;height:100px;">
   <h1 class="centered">Chalked and Loaded</h1>
+<style>h1 {text-decoration: underline;}</style>
 </div>
 </head>
 
-<center>
-<style>h1 {text-decoration: underline;}</style>
+<center>
 
 <h2>Yea so basically heres a bunch of stuff!</h2>
 
