--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<style>body {font-family: "Comic Sans MS", "Comic Sans";}</style>
+<style>body {font-family: "Comic Sans MS", "Comic Sans",sans-serif;}</style>
 <head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
