--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <head>
 <div class="container">
-  <img src="/images/rainbow.gif" alt="image" style="width:device-width;height:100px;">
+  <img src="/images/rainbow.gif" alt="image" style="width:device-width px;height:100px;">
   <h1 class="centered">Chalked and Loaded</h1>
 <style>h1 {text-decoration: underline;}</style>
 </div>
