Change font-family to sans-serif in mastertimeline.html

--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -1,5 +1,5 @@
 <html>
-<style>body {font-family: "Comic Sans MS", "Comic Sans", cursive;}</style>
+<style>body {font-family: "Comic Sans MS", "Comic Sans", sans-serif;}</style>
 
 <center>
 
@@ -13,4 +13,5 @@
 
 
 </center>
+
  </html>
