Enhance climbing page with additional content
Added links and images for Arizona Climbing Crags and TRS gear.

--- a/html/climbing.html
+++ b/html/climbing.html
@@ -9,7 +9,12 @@
 <a href="/html/azcrags.html">
 	<img src="/images/azmap.png" alt="logo" style="width:500px;height:500px;">
 </a>
-<h2>Click Here! for Arizona Climbing Crags</h2>
+<h2>Arizona Climbing Crags</h2>
+
+<a href="/html/trs.html">
+	<img src="/images/trs.png" alt="logo" style="width:430px;height:892px;">
+</a>
+<h2>TRS gear and experiments</h2>
  
 
 
@@ -18,5 +23,6 @@
 </center>
 
  </html>
+
 
 
