--- a/html/azcrags.html
+++ b/html/azcrags.html
@@ -6,6 +6,10 @@
 <h1>Welcome to The Arizona Crags Page</h1>
 <style>h1 {text-decoration: underline;}</style>
 
+<a href="/html/pdraw.html">
+<img src="/images/pdraw.png" alt="logo" style="width:500px;height:450px;">
+</a>
+<h2>Priest Draw</h2>
 
  
 
@@ -13,4 +17,5 @@
 
 
 </center>
+
  </html>
