--- a/html/pdraw.html
+++ b/html/pdraw.html
@@ -3,9 +3,13 @@
 
 <center>
 
-<h1>Welcome to The Arizona Crags Page</h1>
+<h1>Priest Draw, Flagstaff AZ</h1>
 <style>h1 {text-decoration: underline;}</style>
 
+<a href="https://www.madboulder.org/download/priest-draw/priest-draw-bouldering-guide.pdf">
+<img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
+</a>
+<h2>Map from OG PDF guide</h2>
 
  
 
@@ -13,4 +17,5 @@
 
 
 </center>
+
  </html>
