--- a/html/azcrags.html
+++ b/html/azcrags.html
@@ -1,5 +1,5 @@
 <html>
-<style>body {font-family: "Comic Sans MS", "Comic Sans", cursive;}</style>
+<style>body {font-family: "Comic Sans MS", "Comic Sans", sans-serif;}</style>
 
 <center>
 
