Add description paragraph to pdraw.html
Added a paragraph to describe the map from the original PDF guide.

--- a/html/pdraw.html
+++ b/html/pdraw.html
@@ -11,7 +11,7 @@
 <a href="https://www.madboulder.org/download/priest-draw/priest-draw-bouldering-guide.pdf">
 <img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
 </a>
-<h2>Map from OG PDF guide</h2>
+<p>Map from OG PDF guide</p>
 
  
 
@@ -21,4 +21,5 @@
 
 
  </html>
+
 
