Fix formatting and structure of index.html

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 <a href="/html/mastertimeline.html">
 	<img src="/images/bhole.gif" alt="logo" style="width:500px;height:500px;">
 </a>
-<h2>Into the Void: "The Master Timeline"</h2>
+<h2>Into the Void: "The Master Timeline"</h2><br>
 
-<h1>      </h1>
+
 
 <a href="/html/climbing.html">
 	<img src="/images/climbicon.PNG" alt="logo" style="width:500px;height:500px;">
 </a>
-<h2>Click Here! for Climbing stuff</h2>
+<h2>Click Here! for Climbing stuff</h2><br>
 
-<h1>      </h1>
+
 
 
 
@@ -52,6 +52,7 @@
 
 </center>
  </html>
+
 
 
 
