Update image source and fix HTML formatting

--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -6,8 +6,8 @@
 <h1>Welcome to The center of nothing and everyting where time ∝ e^iωt</h1>
 <style>h1 {text-decoration: underline;}</style>
 <br>
-<img src="/images/bjbpie.png" alt="logo" style="width:600px;height:400px;">
-<p>man we live in a society: taco bell baja blast pie</p>
+<img src="/images/mastergarbage/bjbpie.png" alt="logo" style="width:600px;height:400px;">
+<p>man we live in a society:"taco bell baja blast pie"</p>
 <p>11/19/2025 @ 10:26pm</p>
 
 
@@ -19,4 +19,5 @@
 </center>
 
  </html>
+
 
