--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -5,7 +5,9 @@
 
 <h1>Welcome to The center of nothing and everyting where time ∝ e^iωt</h1>
 <style>h1 {text-decoration: underline;}</style>
-<br>
+
+ <p>pls workl</p>
+ <br>
 <img src="/images/mastergarbage/bjbpie.PNG" alt="logo" style="width:600px;height:400px;">
 <p>man we live in a society:"taco bell baja blast pie"</p>
 <p>11/19/2025 @ 10:26pm</p>
@@ -19,6 +21,7 @@
 </center>
 
  </html>
+
 
 
 
