--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -1,16 +1,17 @@
 <html>
 <style>body {font-family: "Comic Sans MS", "Comic Sans", sans-serif;}</style>
-
 <center>
-
 <h1>Welcome to The center of nothing and everyting where time ∝ e^iωt</h1>
 <style>h1 {text-decoration: underline;}</style>
 
- <p>pls workl</p>
+<br>
+<img src="/images/mastergarbage/climbskeleton.jpg" alt="logo" style="width:400px;height:400px;">
+<p>man we live in a society:"taco bell baja blast pie"</p>
+<p>11/19/2025 @ 16:59</p>
  <br>
 <img src="/images/mastergarbage/bjbpie.PNG" alt="logo" style="width:600px;height:400px;">
 <p>man we live in a society:"taco bell baja blast pie"</p>
-<p>11/19/2025 @ 10:26pm</p>
+<p>11/19/2025 @ 10:26</p>
 
 
  
@@ -21,6 +22,7 @@
 </center>
 
  </html>
+
 
 
 
