Update content and formatting in mastertimeline.html

--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -6,7 +6,7 @@
 
 <br>
 <img src="/images/mastergarbage/climbskeleton.jpg" alt="logo" style="width:400px;height:400px;">
-<p>man we live in a society:"taco bell baja blast pie"</p>
+<p>climb meme:"the circular process"</p>
 <p>11/19/2025 @ 16:59</p>
  <br>
 <img src="/images/mastergarbage/bjbpie.PNG" alt="logo" style="width:600px;height:400px;">
@@ -22,6 +22,7 @@
 </center>
 
  </html>
+
 
 
 
