--- a/html/pdraw.html
+++ b/html/pdraw.html
@@ -1,11 +1,19 @@
 <html>
 <style>body {font-family: "Comic Sans MS", "Comic Sans", sans-serif;}</style>
-
+ <style>
+  .top-left-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+</style>
+<div class="top-left-text">
+    <a href="/html/redirect.html">Help! Im Lost</a>
+</div>
 <center>
 
 <h1>Priest Draw, Flagstaff AZ</h1>
 <style>h1 {text-decoration: underline;}</style>
-</center>
 
 
 <a href="https://www.madboulder.org/download/priest-draw/priest-draw-bouldering-guide.pdf">
@@ -13,13 +21,8 @@
 </a>
 <p>Map from OG PDF guide</p>
 
- 
-
-
-
-
-
-
+ </center>
  </html>
+
 
 
