--- a/html/redirect.html
+++ b/html/redirect.html
@@ -1,7 +1,8 @@
 <html>
-<meta http-equiv="refresh" content="3; index.html" />
+<meta http-equiv="refresh" content="3; /html/climbing.html" />
 <center>
 <img src="/images/escropebw.gif" alt="logo" style="width:800px;height:800px;">
 </center>
 
 </html>
+
