Update redirect to point to index.html

--- a/html/redirect.html
+++ b/html/redirect.html
@@ -1,8 +1,9 @@
 <html>
-<meta http-equiv="refresh" content="3; /html/climbing.html" />
+<meta http-equiv="refresh" content="3; URL=index.html" />
 <center>
 <img src="/images/escropebw.gif" alt="logo" style="width:800px;height:800px;">
 </center>
 
 </html>
+
 
