Fix meta tag for redirect URL in redirect.html

--- a/html/redirect.html
+++ b/html/redirect.html
@@ -1,9 +1,10 @@
 <html>
-<meta http-equiv="refresh" content="3; URL=index.html" />
+<meta http-equiv="refresh" content="3; href=index.html" />
 <center>
 <img src="/images/escropebw.gif" alt="logo" style="width:800px;height:800px;">
 </center>
 
 </html>
+
 
 
