--- a/html/redirect.html
+++ b/html/redirect.html
@@ -1,10 +1,11 @@
 <html>
-<meta http-equiv="refresh" content="3; href=index.html" />
+<meta http-equiv="refresh" content="3; URL=https://az.rock-n-rowl.com/" />
 <center>
 <img src="/images/escropebw.gif" alt="logo" style="width:800px;height:800px;">
 </center>
 
 </html>
+
 
 
 
