Add new paragraph to mastertimeline.html

--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -4,7 +4,8 @@
 <h1>Welcome to The center of nothing and everyting where time ∝ e^iωt</h1>
 <style>h1 {text-decoration: underline;}</style>
 
-<br>
+<p>why why why</p>
+ <br>
 <img src="/images/mastergarbage/climbskeleton.jpg" alt="logo" style="width:400px;height:400px;">
 <p>climb meme:"the circular process"</p>
 <p>11/19/2025 @ 16:59</p>
@@ -22,6 +23,7 @@
 </center>
 
  </html>
+
 
 
 
