Update Arizona Crags page with new images
Added a new image link for 'Chinese Wall' and corrected the image path for 'Priest Draw'.

--- a/html/azcrags.html
+++ b/html/azcrags.html
@@ -7,10 +7,14 @@
 <style>h1 {text-decoration: underline;}</style>
 
 <a href="/html/pdraw.html">
-<img src="/images/pdraw.png" alt="logo" style="width:500px;height:450px;">
+<img src="/images/crags/pdraw.PNG" alt="logo" style="width:500px;height:450px;">
 </a>
 <h2>Priest Draw</h2>
-
+<br>
+<a href="/html/cwall.html">
+<img src="/images/crags/chinese.PNG" alt="logo" style="width:500px;height:400px;">
+</a>
+<h2>Priest Draw</h2>
  
 
 
@@ -19,3 +23,4 @@
 </center>
 
  </html>
+
