--- a/html/cwall.html
+++ b/html/cwall.html
@@ -15,9 +15,17 @@
 <h1>New Area development, deep in SOMO</h1>
 <style>h1 {text-decoration: underline;}</style>
 </center>
-<img src="/images/somo/develpment/0.png" alt="logo" style="width:500px;height:510px;">
-
-<p>a day of exploring</p>
+<img src="/images/develpment/cwallday0/0-min.png" alt="logo" style="width:800px;height:360px;">
+ <p>looking at a lowball</p>
+<img src="/images/develpment/cwallday0/1-min.png" alt="logo" style="width:800px;height:360px;">
+ <img src="/images/develpment/cwallday0/2-min.png" alt="logo" style="width:360px;height:800px;">
+ <p>a fallen yet still shaped saguaro</p>
+ <img src="/images/develpment/cwallday0/3-min.png" alt="logo" style="width:800px;height:360px;">
+ <img src="/images/develpment/cwallday0/4-min.png" alt="logo" style="width:800px;height:360px;">
+ <img src="/images/develpment/cwallday0/5-min.png" alt="logo" style="width:360px;height:800px;">
+ <p>jaz in her natural habitat</p>
+ <img src="/images/develpment/cwallday0/6-min.png" alt="logo" style="width:800px;height:360px;">
+<h2>a day of exploring</h2>
 
 
  </html>
