--- a/html/azcrags.html
+++ b/html/azcrags.html
@@ -14,7 +14,7 @@
 <a href="/html/cwall.html">
 <img src="/images/crags/chinese.PNG" alt="logo" style="width:500px;height:400px;">
 </a>
-<h2>Priest Draw</h2>
+<h2>deep somo (under development)</h2>
  
 
 
@@ -23,4 +23,5 @@
 </center>
 
  </html>
+
 
