Fix spelling error in azcrags.html
Corrected the spelling of 'deep somo' to 'deep in somo' in the HTML file.

--- a/html/azcrags.html
+++ b/html/azcrags.html
@@ -14,7 +14,7 @@
 <a href="/html/cwall.html">
 <img src="/images/crags/chinese.PNG" alt="logo" style="width:500px;height:400px;">
 </a>
-<h2>deep somo (under development)</h2>
+<h2>deep in somo (under development)</h2>
  
 
 
@@ -23,5 +23,6 @@
 </center>
 
  </html>
+
 
 
