Enhance climbing page with LRS section
Added links and images for LRS gear and experiments.

--- a/html/climbing.html
+++ b/html/climbing.html
@@ -11,20 +11,24 @@
 </a>
 <h2>Arizona Climbing Crags</h2>
 
-<h1>      </h1>
+<br>
 
 <a href="/html/trs.html">
 	<img src="/images/trs.png" alt="logo" style="width:430px;height:892px;">
 </a>
 <h2>TRS gear and experiments</h2>
  
+<br>
 
-
+<a href="/html/lrs.html">
+	<img src="/images/lrs.png" alt="logo" style="width:430px;height:705px;">
+</a>
+<h2>LRS gear and experiments</h2>
 
 
 </center>
+</html>
 
- </html>
 
 
 
