--- a/html/lrs.html
+++ b/html/lrs.html
@@ -12,13 +12,15 @@
 </div>
 <center>
 
-<h1>LRS Gear Guide and Experiments</h1>
+<h1>LRS Gear Mods and Experiments</h1>
 <style>h1 {text-decoration: underline;}</style>
 
-<p>Gear and Mods</p>
 <img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
+<h2>Gear Mods/Developments/Experiments</h2>
 
 <br>
 
+<img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
+<h2>Full Setups</h2>
 </center>
 </html>
