--- a/html/lrs.html
+++ b/html/lrs.html
@@ -14,6 +14,7 @@
 
 <h1>LRS Gear Mods and Experiments</h1>
 <style>h1 {text-decoration: underline;}</style>
+<p>an exploration into the dark arts</p>
 
 <img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
 <h2>Gear Mods/Developments/Experiments</h2>
@@ -24,3 +25,4 @@
 <h2>Full Setups</h2>
 </center>
 </html>
+
