--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -3,8 +3,12 @@
 <center>
 <h1>Welcome to The center of nothing and everyting where time ∝ e^iωt</h1>
 <style>h1 {text-decoration: underline;}</style>
+ 
 
-<p>why why why</p>
+
+ <br>
+<p>climbing:"first experiments with lrs today... ground fall told me to do more research/mods</p>
+<p>11/24/2025 @ 00:21</p>
  <br>
 <img src="/images/mastergarbage/climbskeleton.jpg" alt="logo" style="width:400px;height:400px;">
 <p>climb meme:"the circular process"</p>
