--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -7,7 +7,7 @@
 
 
  <br>
-<p>climbing:"first experiments with lrs today... ground fall told me to do more research/mods</p>
+<p>climbing:"first experiments with lrs today... ground fall told me to do more research/mods"</p>
 <p>11/24/2025 @ 00:21</p>
  <br>
 <img src="/images/mastergarbage/climbskeleton.jpg" alt="logo" style="width:400px;height:400px;">
