--- a/html/lrs.html
+++ b/html/lrs.html
@@ -16,7 +16,9 @@
 <style>h1 {text-decoration: underline;}</style>
 <p>an exploration into the dark arts</p>
 
-<img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
+<a href="/html/lrsgearexperiment.html">
+	<img src="/images/gearexperiment.png" alt="logo" style="width:400px;height:400px;">
+</a>
 <h2>Gear Mods/Developments/Experiments</h2>
 
 <br>
@@ -25,4 +27,5 @@
 <h2>Full Setups</h2>
 </center>
 </html>
+
 
