--- a/html/mastertimeline.html
+++ b/html/mastertimeline.html
@@ -4,8 +4,10 @@
 <h1>Welcome to The center of nothing and everyting where time ∝ e^iωt</h1>
 <style>h1 {text-decoration: underline;}</style>
  
-
-
+<br>
+<img src="/images/mastergarbage/hamlim.png" alt="logo" style="width:400px;height:400px;">
+<p>heathcliff:"ham limit"</p>
+<p>11/26/2025 @ 18:23</p>
  <br>
 <p>climbing:"first experiments with lrs today... ground fall told me to do more research/mods"</p>
 <p>11/24/2025 @ 00:21</p>
@@ -27,6 +29,7 @@
 </center>
 
  </html>
+
 
 
 
