--- a/html/climbing.html
+++ b/html/climbing.html
@@ -2,8 +2,8 @@
 <style>body {font-family: "Comic Sans MS", "Comic Sans", sans-serif;}</style>
 
 <center>
-
-<h1>Welcome to The Climbing Page</h1>
+<input type="text" id="textField" value="welcome to The Climbing Page"/>
+<h1 id="animated"></h1>
 <style>h1 {text-decoration: underline;}</style>
 
 <a href="/html/azcrags.html">
@@ -28,6 +28,7 @@
 
 </center>
 </html>
+
 
 
 
