--- a/html/lrsgearexperiment.html
+++ b/html/lrsgearexperiment.html
@@ -16,6 +16,9 @@
 <style>h1 {text-decoration: underline;}</style>
 <p>Petzls Worst Nightmare</p>
 <br>
+ <a href="/html/lrsgrigriexperiment.html">
+	<img src="/images/grgr.png" alt="logo" style="width:400px;height:400px;">
+</a>
 <h2>Grigri Defacing</h2>
 </center>
 </html>
