--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
 <a href="/html/mastertimeline.html">
 	<img src="/images/bhole.gif" alt="logo" style="width:500px;height:500px;">
 </a>
-<h2>Into the Void: "The Master Timeline"</h2><br>
+<h2>Into the Void: "The Master Timeline"</h2>
+	
+<br>
+	
+<marquee behavior="alternate" direction="left">
+	<img src="/images/brain.png" width="80" height="80" alt="Natural" />
+</marquee>
 
-
-
+<br>
+	
 <a href="/html/climbing.html">
 	<img src="/images/climbicon.PNG" alt="logo" style="width:500px;height:500px;">
 </a>
@@ -52,6 +58,7 @@
 
 </center>
  </html>
+
 
 
 
