--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
 </a>
 <h2>Into the Void: "The Master Timeline"</h2>
 	
-<br>
-	
 <marquee behavior="alternate" direction="left">
+	<a href="/html/thoughts.html">
 	<img src="/images/brain.png" width="80" height="80" alt="Natural" />
+	</a>
 </marquee>
-
-<br>
 	
 <a href="/html/climbing.html">
 	<img src="/images/climbicon.PNG" alt="logo" style="width:500px;height:500px;">
@@ -58,6 +56,7 @@
 
 </center>
  </html>
+
 
 
 
