--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </a>
 <h2>Into the Void: "The Master Timeline"</h2>
 	
-<marquee behavior="alternate" direction="left">
+<marquee behavior="alternate" direction="left" scrollamount="3" scrolldelay="20" truespeed="truespeed">
 	<a href="/html/thoughts.html">
 	<img src="/images/brain.png" width="80" height="80" alt="Natural" />
 	</a>
@@ -56,6 +56,7 @@
 
 </center>
  </html>
+
 
 
 
