--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 </a>
 <h2>Into the Void: "The Master Timeline"</h2>
 	
-<marquee behavior="alternate" direction="left" scrollamount="3" scrolldelay="20" truespeed="truespeed">
+<marquee behavior="alternate" direction="up" scrollamount="3" scrolldelay="10" truespeed="truespeed">
 	<a href="/html/thoughts.html">
-	<img src="/images/brain.png" width="80" height="80" alt="Natural" />
+	<img src="/images/brain.png" width="60" height="60" alt="Natural" />
 	</a>
 </marquee>
 	
@@ -56,6 +56,7 @@
 
 </center>
  </html>
+
 
 
 
