--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	
 <marquee direction="down">
 	<a href="/html/thoughts.html">
-	<img src="/images/brain.png" width="60" height="60" alt="Natural" />
+	<img src="/images/brain.png" alt="logo" style="width:60px;height:60px;">
 	</a>
 </marquee>
 	
@@ -56,6 +56,7 @@
 
 </center>
  </html>
+
 
 
 
