--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </a>
 <h2>Into the Void: "The Master Timeline"</h2>
 	
-<marquee direction="down">
+<marquee scrollamount="3" scrolldelay="10" truespeed="truespeed" direction="right" behavior="alternate">
 	<a href="/html/thoughts.html">
 	<img src="/images/brain.png" alt="logo" style="width:60px;height:60px;">
 	</a>
@@ -56,6 +56,7 @@
 
 </center>
  </html>
+
 
 
 
