--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h2>Into the Void: "The Master Timeline"</h2>
 	
 <marquee scrollamount="3" scrolldelay="10" truespeed="truespeed" direction="right" behavior="alternate">
-	<a href="/html/thoughts.html">
+	<a href="/html/thinking.html">
 	<img src="/images/brain.png" alt="logo" style="width:60px;height:60px;">
 	</a>
 </marquee>
@@ -45,9 +45,15 @@
 </a>
 <h2>Click Here! for Climbing stuff</h2><br>
 
+<a href="/html/life.html">
+	<img src="/images/life.png" alt="logo" style="width:1000px;height:300px;">
+</a>
+<h2>Just an Organism cellularly resperating</h2><br>
 
-
-
+<a href="/html/trips.html">
+	<img src="/images/earth.PNG" alt="logo" style="width:500px;height:500px;">
+</a>
+<h2>Investigating around the Globe</h2><br>
 
  
 
@@ -56,6 +62,7 @@
 
 </center>
  </html>
+
 
 
 
