--- a/html/lrs.html
+++ b/html/lrs.html
@@ -10,6 +10,7 @@
 <div class="top-left-text">
     <a href="/html/redirect.html">Help! Im Lost</a>
 </div>
+<body style="background-color: black;">
 <center>
 
 <h1>LRS Gear Mods and Experiments</h1>
@@ -25,7 +26,10 @@
 
 <img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
 <h2>Full Setups</h2>
+
+</body>
 </center>
 </html>
+
 
 
