--- a/html/lrs.html
+++ b/html/lrs.html
@@ -13,23 +13,24 @@
 <body style="background-color: black;">
 <center>
 
-<h1>LRS Gear Mods and Experiments</h1>
+<h1 style="color: teal;">LRS Gear Mods and Experiments</h1>
 <style>h1 {text-decoration: underline;}</style>
-<p>an exploration into the dark arts</p>
+<p style="color: teal;">an exploration into the dark arts</p>
 
 <a href="/html/lrsgearexperiment.html">
 	<img src="/images/gearexperiment.png" alt="logo" style="width:400px;height:400px;">
 </a>
-<h2>Gear Mods/Developments/Experiments</h2>
+<h2 style="color: teal;">Gear Mods/Developments/Experiments</h2>
 
 <br>
 
 <img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
-<h2>Full Setups</h2>
+<h2 style="color: teal;">Full Setups</h2>
 
 </body>
 </center>
 </html>
+
 
 
 
