--- a/html/thinking.html
+++ b/html/thinking.html
@@ -26,6 +26,10 @@
 
 <h2>Solo Bouldering:</h2>
 <p>Solo bouldering is good for you. It teaches things like beta reading for your style/box/span, it strengthens mental fortitude by forcing one to think about self preservation through sketchy topouts and commiting moves which also necessitates one to learn how to minimally pad a problem. </p>
+<br>
+
+<h2>The process:</h2>
+<p>Its more fun and more rewarding doing and accomplishing things the hard way. Stay focused and enjoy the process</p>
 
 </center>
 </html>
