--- a/html/lrsgearexperiment.html
+++ b/html/lrsgearexperiment.html
@@ -10,16 +10,19 @@
 <div class="top-left-text">
     <a href="/html/redirect.html">Help! Im Lost</a>
 </div>
+<body style="background-color: black;">
 <center>
 
-<h1>LRS Gear Mods and Experiments</h1>
+<h1 style="color: teal;">LRS Gear Mods and Experiments</h1>
 <style>h1 {text-decoration: underline;}</style>
-<p>Petzls Worst Nightmare</p>
+<p style="color: teal;">Petzls Worst Nightmare</p>
 <br>
  <a href="/html/lrsgrigriexperiment.html">
 	<img src="/images/grgr.png" alt="logo" style="width:400px;height:400px;">
 </a>
-<h2>Grigri Defacing</h2>
+<h2 style="color: teal;">Grigri Defacing</h2>
+</body>
 </center>
 </html>
+
 
