--- a/html/lrsgrigriexperiment.html
+++ b/html/lrsgrigriexperiment.html
@@ -10,18 +10,20 @@
 <div class="top-left-text">
     <a href="/html/redirect.html">Help! Im Lost</a>
 </div>
+ <body style="background-color: black;">
 <center>
 
 <h1>LRS GriGri Experiments and Defacing</h1>
 <style>h1 {text-decoration: underline;}</style>
-<p>dont do this shit please</p>
-<br>
-<h2>Cam Spring Removal</h2>
+<p style="color: teal;">dont do this shit please</p>
+<h2 style="color: teal;">Cam Spring Removal</h2>
 <img src="/images/grgr.png" alt="logo" style="width:400px;height:400px;">
 
 <br>
-<h2>HUB attachement method</h2>
+<h2 style="color: teal;">HUB attachement method</h2>
 <img src="/images/grgr.png" alt="logo" style="width:400px;height:400px;">
+
+ </body>
 </center>
 </html>
 
