--- a/html/lrsgrigriexperiment.html
+++ b/html/lrsgrigriexperiment.html
@@ -13,7 +13,7 @@
  <body style="background-color: black;">
 <center>
 
-<h1>LRS GriGri Experiments and Defacing</h1>
+<h1 style="color: teal;">LRS GriGri Experiments and Defacing</h1>
 <style>h1 {text-decoration: underline;}</style>
 <p style="color: teal;">dont do this shit please</p>
 <h2 style="color: teal;">Cam Spring Removal</h2>
