--- a/html/trs.html
+++ b/html/trs.html
@@ -10,6 +10,7 @@
 <div class="top-left-text">
     <a href="/html/redirect.html">Help! Im Lost</a>
 </div>
+ <body style="background-color: black;">
 <center>
 
 <h1>TRS Gear Guide and Experiments</h1>
@@ -24,5 +25,6 @@
 <img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
 <p>Gear/Scenario Experiments</p>
 
+ </body>
 </center>
 </html>
