--- a/html/trs.html
+++ b/html/trs.html
@@ -13,18 +13,19 @@
  <body style="background-color: black;">
 <center>
 
-<h1>TRS Gear Guide and Experiments</h1>
+<h1 style="color: teal;">TRS Gear Guide and Experiments</h1>
 <style>h1 {text-decoration: underline;}</style>
 
 
 <img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
-<p>Typical Gear Setup</p>
+<p style="color: teal;">Typical Gear Setup</p>
 
 <br>
 
 <img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
-<p>Gear/Scenario Experiments</p>
+<p style="color: teal;">Gear/Scenario Experiments</p>
 
  </body>
 </center>
 </html>
+
