--- a/html/lrsgrigriexperiment.html
+++ b/html/lrsgrigriexperiment.html
@@ -19,29 +19,29 @@
 
  
  <h2 style="color: teal;">Cam Spring Removal</h2>
-<img src="images/lrsgrigri/1.jpg" alt="logo" style="width:400px;height:400px;">
+<img src="/images/lrsgrigri/1.jpg" alt="logo" style="width:400px;height:400px;">
  <p style="color: teal;">remove screw</p>
-<img src="images/lrsgrigri/2.jpg" alt="logo" style="width:400px;height:400px;">
+<img src="/images/lrsgrigri/2.jpg" alt="logo" style="width:400px;height:400px;">
  <p style="color: teal;">pry off plastic cover</p>
-<img src="images/lrsgrigri/3.jpg" alt="logo" style="width:400px;height:400px;">
+<img src="/images/lrsgrigri/3.jpg" alt="logo" style="width:400px;height:400px;">
  <p style="color: teal;">realize the grigri+ is a scam because this is "lead mode"</p>
-<img src="images/lrsgrigri/4.jpg" alt="logo" style="width:400px;height:400px;">
+<img src="/images/lrsgrigri/4.jpg" alt="logo" style="width:400px;height:400px;">
  <p style="color: teal;">and this is "top rope mode"</p>
-<img src="images/lrsgrigri/5.jpg" alt="logo" style="width:400px;height:700px;">
+<img src="/images/lrsgrigri/5.jpg" alt="logo" style="width:400px;height:700px;">
  <p style="color: teal;">before grinding nubbin</p>
-<img src="images/lrsgrigri/6.jpg" alt="logo" style="width:400px;height:700px;">
+<img src="/images/lrsgrigri/6.jpg" alt="logo" style="width:400px;height:700px;">
  <p style="color: teal;">after grinding nubbin</p>
-<img src="images/lrsgrigri/7.jpg" alt="logo" style="width:400px;height:400px;">
+<img src="/images/lrsgrigri/7.jpg" alt="logo" style="width:400px;height:400px;">
  <p style="color: teal;">the lil nubbin</p>
-<img src="images/lrsgrigri/8.jpg" alt="logo" style="width:400px;height:400px;">
+<img src="/images/lrsgrigri/8.jpg" alt="logo" style="width:400px;height:400px;">
  <p style="color: teal;">lube her up and replace cover</p>
 
  <br>
 
  <h2 style="color: teal;">HUB attachement method</h2>
-<img src="images/lrsgrigri/9.jpg" alt="logo" style="width:400px;height:400px;">
+<img src="/images/lrsgrigri/9.jpg" alt="logo" style="width:400px;height:400px;">
  <p style="color: teal;">plastic attachment point</p>
-<img src="images/lrsgrigri/10.jpg" alt="logo" style="width:400px;height:700px;">
+<img src="/images/lrsgrigri/10.jpg" alt="logo" style="width:400px;height:700px;">
  <p style="color: teal;">sideplate attachment point</p>
 
  </body>
