--- a/html/azcrags.html
+++ b/html/azcrags.html
@@ -6,12 +6,12 @@
 <h1>Welcome to The Arizona Crags Page</h1>
 <style>h1 {text-decoration: underline;}</style>
 
-<a href="/html/pdraw.html">
+<a href="/html/azcrags/pdraw.html">
 <img src="/images/crags/pdraw.PNG" alt="logo" style="width:500px;height:450px;">
 </a>
 <h2>Priest Draw</h2>
 <br>
-<a href="/html/cwall.html">
+<a href="/html/azcrags/cwall.html">
 <img src="/images/crags/chinese.PNG" alt="logo" style="width:500px;height:400px;">
 </a>
 <h2>deep in somo (under development)</h2>
@@ -23,6 +23,7 @@
 </center>
 
  </html>
+
 
 
 
