--- a/html/cwall.html
+++ b/html/cwall.html
@@ -15,22 +15,17 @@
 <h1>New Area development, deep in SOMO</h1>
 <style>h1 {text-decoration: underline;}</style>
 <br>
- <h2>a day of exploring</h2>
+<a href="/html/azcrags/cragdays/cwall_112125.html">
+<h2>a day of climbing 12/06/25</h2>
+</a>
+<br>
+ <a href="/html/azcrags/cragdays/cwall_120625.html">
+<h2>a day of exploring 11/21/25</h2>
+</a>
+
  
-<img src="/images/development/cwallday0/0-min.jpg" alt="logo" style="width:800px;height:360px;">
- <p>looking at a lowball</p>
-<img src="/images/development/cwallday0/1-min.jpg" alt="logo" style="width:800px;height:360px;">
- <br>
- <img src="/images/development/cwallday0/2-min.jpg" alt="logo" style="width:360px;height:800px;">
- <p>a fallen yet still shaped saguaro</p>
- <img src="/images/development/cwallday0/3-min.jpg" alt="logo" style="width:800px;height:360px;">
- <br>
- <img src="/images/development/cwallday0/4-min.jpg" alt="logo" style="width:800px;height:360px;">
- <br>
- <img src="/images/development/cwallday0/5-min.jpg" alt="logo" style="width:360px;height:800px;">
- <p>jaz in her natural habitat</p>
- <img src="/images/development/cwallday0/6-min.jpg" alt="logo" style="width:800px;height:360px;">
- <br>
+
+ 
 
 </center>
 
