--- a/html/cwall.html
+++ b/html/cwall.html
@@ -12,7 +12,20 @@
 </div>
 <center>
 
-<h1>Nejrgehjrbgkerbgkerg</h1>
+<h1>New Area development, deep in SOMO</h1>
+<style>h1 {text-decoration: underline;}</style>
+<br>
+<a href="/html/azcrags/cragdays/cwall_112125.html">
+<h2>a day of climbing 12/06/25</h2>
+</a>
+<br>
+ <a href="/html/azcrags/cragdays/cwall_120625.html">
+<h2>a day of exploring 11/21/25</h2>
+</a>
+
+ 
+
+ 
 
 </center>
 
