--- a/html/azcrags.html
+++ b/html/azcrags.html
@@ -7,14 +7,20 @@
 <style>h1 {text-decoration: underline;}</style>
 
 <a href="/html/azcrags/pdraw.html">
-<img src="/images/crags/pdraw.PNG" alt="logo" style="width:500px;height:450px;">
+<img src="/images/crags/pdraw.PNG" alt="logo" style="width:400px;height:400px;">
 </a>
 <h2>Priest Draw</h2>
 <br>
 <a href="/html/azcrags/cwall.html">
-<img src="/images/crags/chinese.PNG" alt="logo" style="width:500px;height:400px;">
+<img src="/images/crags/chinese.PNG" alt="logo" style="width:400px;height:350px;">
 </a>
 <h2>deep in somo (under development)</h2>
+<br>
+ <a href="/html/azcrags/supes.html">
+<img src="/images/crags/supes.jpg" alt="logo" style="width:400px;height:400px;">
+</a>
+<h2>Superstion Mountains</h2>
+<br>
  
 
 
@@ -23,6 +29,7 @@
 </center>
 
  </html>
+
 
 
 
