--- a/html/azcrags.html
+++ b/html/azcrags.html
@@ -11,7 +11,7 @@
 </a>
 <h2>Priest Draw</h2>
 <br>
-<a href="/html/azcrags/cwall.html">
+<a href="/html/azcrags/chnswall.html">
 <img src="/images/crags/chinese.PNG" alt="logo" style="width:400px;height:350px;">
 </a>
 <h2>deep in somo (under development)</h2>
@@ -29,6 +29,7 @@
 </center>
 
  </html>
+
 
 
 
