--- a/html/azcrags.html
+++ b/html/azcrags.html
@@ -11,15 +11,15 @@
 </a>
 <h2>Priest Draw</h2>
 <br>
-<a href="/html/azcrags/chnswall.html">
-<img src="/images/crags/chinese.PNG" alt="logo" style="width:400px;height:350px;">
-</a>
-<h2>deep in somo (under development)</h2>
-<br>
  <a href="/html/azcrags/supes.html">
 <img src="/images/crags/supes.jpg" alt="logo" style="width:400px;height:400px;">
 </a>
 <h2>Superstion Mountains</h2>
+<br>
+ <a href="/html/azcrags/chinesewall.html">
+<img src="/images/crags/chinese.PNG" alt="logo" style="width:400px;height:350px;">
+</a>
+<h2>deep in somo (under development)</h2>
 <br>
  
 
@@ -29,6 +29,7 @@
 </center>
 
  </html>
+
 
 
 
