--- a/html/azcrags/cragdays/cwall_120625.html
+++ b/html/azcrags/cragdays/cwall_120625.html
@@ -15,22 +15,20 @@
 <h1>New Area development, deep in SOMO</h1>
 <style>h1 {text-decoration: underline;}</style>
 <br>
- <h2>a day of exploring</h2>
+ <h2>climbing day 1</h2>
  
-<img src="/images/development/cwallday0/0-min.jpg" alt="logo" style="width:800px;height:360px;">
- <p>looking at a lowball</p>
-<img src="/images/development/cwallday0/1-min.jpg" alt="logo" style="width:800px;height:360px;">
- <br>
- <img src="/images/development/cwallday0/2-min.jpg" alt="logo" style="width:360px;height:800px;">
- <p>a fallen yet still shaped saguaro</p>
- <img src="/images/development/cwallday0/3-min.jpg" alt="logo" style="width:800px;height:360px;">
- <br>
- <img src="/images/development/cwallday0/4-min.jpg" alt="logo" style="width:800px;height:360px;">
- <br>
- <img src="/images/development/cwallday0/5-min.jpg" alt="logo" style="width:360px;height:800px;">
- <p>jaz in her natural habitat</p>
- <img src="/images/development/cwallday0/6-min.jpg" alt="logo" style="width:800px;height:360px;">
- <br>
+<img src="/images/development/cwallday1/1.jpg" alt="logo" style="width:400px;height:900px;">
+ <p>V1 ish</p>
+<img src="/images/development/cwallday1/2.jpg" alt="logo" style="width:400px;height:900px;">
+ <p>V1 ish</p>
+ <img src="/images/development/cwallday1/3.jpg" alt="logo" style="width:400px;height:900px;">
+ <p>V2 ish</p>
+ <img src="/images/development/cwallday1/4.jpg" alt="logo" style="width:400px;height:900px;">
+ <p>V1 ish</p>
+ <img src="/images/development/cwallday1/5.jpg" alt="logo" style="width:400px;height:900px;">
+ <p>V0</p>
+ <img src="/images/development/cwallday1/6.jpg" alt="logo" style="width:400px;height:900px;">
+ <p>"no girls allowed" V2</p>
 
 </center>
 
