--- a/html/climbing.html
+++ b/html/climbing.html
@@ -12,6 +12,13 @@
 
 <br>
 
+<a href="/html/2026goals.html">
+	<img src="/images/2026.jpg" alt="logo" style="width:400px;height:270px;">
+</a>
+<h2>2026 Climbing Goals</h2>
+
+<br>
+
 <a href="/html/trs.html">
 	<img src="/images/trs.png" alt="logo" style="width:430px;height:892px;">
 </a>
@@ -27,6 +34,7 @@
 <br>
 </center>
 </html>
+
 
 
 
