--- a/html/2026goals.html
+++ b/html/2026goals.html
@@ -5,6 +5,7 @@
 
 <h1>Climbing goals/challenges and non climbing goals</h1>
 <style>h1 {text-decoration: underline;}</style>
+<h2>A year of volume: "Quantity Awakens Quality"</h2>
 
 <a href="/html/pimapunisher.html">
 <img src="/images/crags/pdraw.PNG" alt="logo" style="width:400px;height:400px;">
