--- a/html/2026goals.html
+++ b/html/2026goals.html
@@ -3,17 +3,17 @@
 
 <center>
 
-<h1>Climbing goals/challenges and non climbing goals</h1>
+<h1>Climbing goals/challenges</h1>
 <style>h1 {text-decoration: underline;}</style>
 <h2>A year of volume: "Quantity Awakens Quality"</h2>
 
 <a href="/html/pimapunisher.html">
-<img src="/images/crags/pdraw.PNG" alt="logo" style="width:400px;height:400px;">
+<img src="/images/pimapunisher.PNG" alt="logo" style="width:400px;height:400px;">
 </a>
 <h2>Pima Punisher</h2>
 <br>
  <a href="/html/2026vpoint.html">
-<img src="/images/crags/supes.jpg" alt="logo" style="width:400px;height:400px;">
+<img src="/images/verm.jpg" alt="logo" style="width:400px;height:400px;">
 </a>
 <h2>500 Fresh V point tracker</h2>
 <br>
