--- a/html/2026goals.html
+++ b/html/2026goals.html
@@ -7,12 +7,12 @@
 <style>h1 {text-decoration: underline;}</style>
 <h2>A year of volume: "Quantity Awakens Quality"</h2>
 
-<a href="/html/pimapunisher.html">
+<a href="/html/2026goals/pimapunisher.html">
 <img src="/images/pimapunisher.PNG" alt="logo" style="width:400px;height:400px;">
 </a>
 <h2>Pima Punisher</h2>
 <br>
- <a href="/html/2026vpoint.html">
+ <a href="/html/2026goals/2026vpoint.html">
 <img src="/images/verm.jpg" alt="logo" style="width:400px;height:400px;">
 </a>
 <h2>500 Fresh V point tracker</h2>
