--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -3,32 +3,25 @@
 
 <center>
 
-<h1>Welcome to The Arizona Crags Page</h1>
+<h1>The 500 V-Point Challenge!</h1>
 <style>h1 {text-decoration: underline;}</style>
+<p>1/1/26 - 12/31/26</p>
 
-<a href="/html/azcrags/pdraw.html">
-<img src="/images/crags/pdraw.PNG" alt="logo" style="width:400px;height:400px;">
-</a>
-<h2>Priest Draw</h2>
-<br>
- <a href="/html/azcrags/supes.html">
-<img src="/images/crags/supes.jpg" alt="logo" style="width:400px;height:400px;">
-</a>
-<h2>Superstion Mountains</h2>
-<br>
- <a href="/html/azcrags/chinesewall.html">
-<img src="/images/crags/chinese.PNG" alt="logo" style="width:400px;height:350px;">
-</a>
-<h2>deep in somo (under development)</h2>
-<br>
- 
+<h2>The Rules:</h2>
+<h2>1. Only fresh sends count towards total </h2>
+<h2>2. V0 do not count towards total</h2>
+<h2>3. Grade ambiguous climbs earn the comparitive grade to other problems</h2>
+<h2>4. Flashes of V7 and above earn double points</h2>
 
 
+<h2>THE LIST</h2>
+<style>h2 {text-decoration: underline;}</style>
 
+<h2>Total: 0</h2>
 
 </center>
+</html>
 
- </html>
 
 
 
