--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -3,25 +3,14 @@
 
 <center>
 
-<h1>Welcome to The Arizona Crags Page</h1>
+<h1>The Pima Punisher!</h1>
 <style>h1 {text-decoration: underline;}</style>
 
-<a href="/html/azcrags/pdraw.html">
-<img src="/images/crags/pdraw.PNG" alt="logo" style="width:400px;height:400px;">
-</a>
-<h2>Priest Draw</h2>
+<h2>The goal is simple, do every climb in the pima canyon area of SoMo</h2>
+<h2>Within 2026</h2>
+<p>maybe not the hustle, but thatd be cool</p>
 <br>
- <a href="/html/azcrags/supes.html">
-<img src="/images/crags/supes.jpg" alt="logo" style="width:400px;height:400px;">
-</a>
-<h2>Superstion Mountains</h2>
-<br>
- <a href="/html/azcrags/chinesewall.html">
-<img src="/images/crags/chinese.PNG" alt="logo" style="width:400px;height:350px;">
-</a>
-<h2>deep in somo (under development)</h2>
-<br>
- 
+
 
 
 
@@ -29,6 +18,7 @@
 </center>
 
  </html>
+
 
 
 
