--- a/html/azcrags.html
+++ b/html/azcrags.html
@@ -1,6 +1,15 @@
 <html>
 <style>body {font-family: "Comic Sans MS", "Comic Sans", sans-serif;}</style>
-
+ <style>
+  .top-left-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+</style>
+<div class="top-left-text">
+    <a href="/html/redirect.html">Help! Im Lost</a>
+</div>
 <center>
 
 <h1>Welcome to The Arizona Crags Page</h1>
@@ -29,6 +38,7 @@
 </center>
 
  </html>
+
 
 
 
