--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -1,6 +1,15 @@
 <html>
 <style>body {font-family: "Comic Sans MS", "Comic Sans", sans-serif;}</style>
-
+ <style>
+  .top-left-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+</style>
+<div class="top-left-text">
+    <a href="/html/redirect.html">Help! Im Lost</a>
+</div>
 <center>
 
 <h1>The Pima Punisher!</h1>
@@ -18,6 +27,7 @@
 </center>
 
  </html>
+
 
 
 
