--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -20,6 +20,11 @@
 <p>maybe not the hustle, but thatd be cool</p>
 <br>
 
+<a href="/html/pimaclimbs.html">
+	<h2>Complete List: 120 problems & 2 Routes</h2>
+</a>
+
+<h2>climbs by date</h2>
 
 
 
@@ -27,6 +32,7 @@
 </center>
 
  </html>
+
 
 
 
