--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -15,8 +15,7 @@
 <h1>The Pima Punisher!</h1>
 <style>h1 {text-decoration: underline;}</style>
 
-<h2>The goal is simple, do every climb in the pima canyon area of SoMo</h2>
-<h2>Within 2026</h2>
+<h2>The goal is simple, do every climb in the pima canyon area of SoMo within 2026</h2>
 <p>maybe not the hustle, but thatd be cool</p>
 <br>
 
@@ -32,6 +31,7 @@
 </center>
 
  </html>
+
 
 
 
