--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -20,7 +20,8 @@
 <h2>1. Only fresh sends count towards total </h2>
 <h2>2. V0 do not count towards total</h2>
 <h2>3. Grade ambiguous climbs earn the comparitive grade to other problems</h2>
-<h2>4. Flashes of V7 and above earn double points</h2>
+<h2>4. SDS/extensions/linkups earn points independently from stand </h2>
+<h2>5. Flashes of V7 and above earn double points</h2>
 
 
 <h1>THE LIST</h1>
