--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -19,7 +19,7 @@
 <p>maybe not the hustle, but thatd be cool</p>
 <br>
 
-<a href="/html/pimaclimbs.html">
+<a href="/html/2026goals/pimaclimbs.html">
 	<h2>Complete List: 120 problems & 2 Routes</h2>
 </a>
 
@@ -31,6 +31,7 @@
 </center>
 
  </html>
+
 
 
 
