Add new climbing routes and update existing ones

--- a/html/azcrags/pimaclimbs.html
+++ b/html/azcrags/pimaclimbs.html
@@ -38,6 +38,7 @@
 <p>	No Limits	V0	</p>
 <p>	Surrealism on Acid	V0	</p>
 <p>	Nothing to it	V0	</p>
+<p>	Serpents Throne	V0	</p>
 <p>	Nut Cracker	V0	</p>
 <p>	Frosted Flakes	V0	</p>
 <p>	Razors Edge	V0	</p>
@@ -45,12 +46,21 @@
 <p>	Slick Trip	V0	</p>
 <p>	Unnamed Crack Problem	V0	</p>
 <p>	Mike’s Rainbow Sandals	V0	</p>
+<p> Tweedle Dumb	V0	</p>
+<p> Dilbert	V0	</p>
+<p> Planetspotting	V0	</p>
+<p> Studio Special	V0	</p>
+<p>	Mannys Problem	V0	</p>
 <p>	Birth of Venus	V0-1	</p>
-<p>	Tweedle Dee and Tweedle Dumb	V1	</p>
+<p>	Tweedle Dee V1 </p>
+<p>	Wanderlust V1 </p>
 <p>	Schnebly Does Crack	V1	</p>
 <p>	Simple Solution	V1	</p>
 <p>	Flippin the Bitch	V1	</p>
 <p>	Pinch Hitter	V1	</p>
+<p>	3 D's Are Better Than 2	V1	</p>
+<p>	Gaurdian Of The Canvas	V1	</p>
+<p> Dilbert Unleashed	V0	</p>
 <p>	Arrowhead	V1-2	</p>
 <p>	Jiffy Pop	V1-2	</p>
 <p>	Guardian of the Canvas	V1-2	</p>
@@ -62,14 +72,19 @@
 <p>	Silly Little Dirty	V2	</p>
 <p>	The Tongue	V2	</p>
 <p>	Topsy Turvy	V2	</p>
+<p>	Lost And Found	V2	</p>
+<p>	Frosted Flakes	V2	</p>
 <p>	Palette Knife	V2	</p>
+<p>	The Onion	V2	</p>
 <p>	Easy Way Out	V2	</p>
 <p>	Snake Pit	V2	</p>
+<p> Liposuction V2</p>
 <p>	Tatoo Tiger	V2	</p>
 <p>	Rangler	V2	</p>
 <p>	Mother Neature	V2	</p>
 <p>	No Flakes Given	V2	</p>
 <p>	Dick Leakage	V2	</p>
+<p>	Hand Jive	V2	</p>
 <p>	Wheat Thin	V2-3	</p>
 <p>	Mindfullness	V3	</p>
 <p>	Nasal Cavity (Jump Start)	V3	</p>
@@ -78,17 +93,24 @@
 <p>	White Men Don't Jump (Jump Start Right)	V3	</p>
 <p>	Two Scoops	V3	</p>
 <p>	Projected	V3	</p>
+<p>	Side Salad	V3	</p>
+<p>	South America V3	</p>
+<p> Washed Out V3 </p>
+<p> Iguana Head V3 </p>
+<p> Superfly V3 </p>
 <p>	Throw Some D's	V3	</p>
 <p>	Seeing Red	V3	</p>
 <p>	Clamor and Filth of the Cultural Apparatus	V3	</p>
 <p>	KG SOLOMAN 5000	V3	</p>
 <p>	Crackhead	V3	</p>
+<p> Key To The Kingdom V3 </p>
 <p>	First Time	V3	</p>
 <p>	Grease Monkey	V3	</p>
 <p>	Slo-Mo	V4	</p>
 <p>	Number  1 OW	V4	</p>
 <p>	Crown Jewel	V4	</p>
 <p>	Stairway to Heaven	V4	</p>
+<p> Standing Ovation V4 </p>
 <p>	Tsunami	V4	</p>
 <p>	Tsunami Arete	V4	</p>
 <p>	Main Attraction	V4	</p>
@@ -97,11 +119,15 @@
 <p>	Air Leeches	V4	</p>
 <p>	Cocaine Corner	V4	</p>
 <p>	MVFB	V4	</p>
+<p>	Hallow Man	V4	</p>
 <p>	Pima Traverse	V4	</p>
 <p>	Mr. Schnebly	V4	</p>
+<p>	The Lecture	V4	</p>
 <p>	Red Ruby	V4	</p>
+<p>	Pop Rocks	V4	</p>
 <p>	Muay Thai Friday	V4	</p>
 <p>	Crown Traverse	V4	</p>
+<p>	Sidewinder	V4	</p>
 <p>	Deviated Septum	V4-5	</p>
 <p>	Locked and Loaded	V5	</p>
 <p>	Rocky Mountain Daydream	V5	</p>
@@ -110,6 +136,7 @@
 <p>	Fisticuffs	V5	</p>
 <p>	Table Topper	V5	</p>
 <p>	Seven Samurai	V5	</p>
+<p>	Shards Of Narsil	V5	</p>
 <p>	Seven Samurai Direct	V5	</p>
 <p>	Nutshell	V5	</p>
 <p>	Diamond in the Rough	V5	</p>
@@ -126,6 +153,7 @@
 <p>	Elephant Forest	V6	</p>
 <p>	Sideshow Bob	V6	</p>
 <p>	Wheaties	V6	</p>
+<p>	Gritstone	V6	</p>
 <p>	Wawa	V6	</p>
 <p>	Rip Curl	V6-7	</p>
 <p>	Hairy Cleavage	V7	</p>
@@ -137,6 +165,7 @@
 <p>	Mini Slashface	V9	</p>
 <p>	Mega Slotface	V9	</p>
 <p>	Black Star	V9-10	</p>
+<p>Believe The Hype V10</p>
 <p>	Scarface	V11	</p>
 <p>	The Hustle	V12	</p>
 <br>
