--- a/html/azcrags/pimaclimbs.html
+++ b/html/azcrags/pimaclimbs.html
@@ -32,10 +32,17 @@
 <p>	Suspended Animation	V0	</p>
 <p>	Proud Line	V0	</p>
 <p>	Varicose Vein	V0	</p>
+<p>	Lost	V0	</p>
 <p>	Walking Tall	V0	</p>
+<p>	Hidden Splendor	V0	</p>
 <p>	The Librarian	V0	</p>
+<p>	Cowgirl Sex	V0	</p>
+<p>	Cowboy Sex	V0	</p>
 <p>	Finger Food	V0	</p>
 <p>	No Limits	V0	</p>
+<p>	Spindrift	V0	</p>
+<p>	Honduran	V0	</p>
+<p>	Wrong Place, Wrong Time	V0	</p>
 <p>	Surrealism on Acid	V0	</p>
 <p>	Nothing to it	V0	</p>
 <p>	Serpents Throne	V0	</p>
@@ -48,6 +55,7 @@
 <p>	Mike’s Rainbow Sandals	V0	</p>
 <p> Tweedle Dumb	V0	</p>
 <p> Dilbert	V0	</p>
+<p> Stand And Deliver	V0	</p>
 <p> Planetspotting	V0	</p>
 <p> Studio Special	V0	</p>
 <p>	Mannys Problem	V0	</p>
@@ -58,6 +66,7 @@
 <p>	Simple Solution	V1	</p>
 <p>	Flippin the Bitch	V1	</p>
 <p>	Pinch Hitter	V1	</p>
+<p>	Snap Crackle Pop	V1	</p>
 <p>	3 D's Are Better Than 2	V1	</p>
 <p>	Gaurdian Of The Canvas	V1	</p>
 <p> Dilbert Unleashed	V0	</p>
@@ -75,18 +84,24 @@
 <p>	Lost And Found	V2	</p>
 <p>	Frosted Flakes	V2	</p>
 <p>	Palette Knife	V2	</p>
+<p>	Slip N' Slide	V2	</p>
 <p>	The Onion	V2	</p>
 <p>	Easy Way Out	V2	</p>
 <p>	Snake Pit	V2	</p>
 <p> Liposuction V2</p>
 <p>	Tatoo Tiger	V2	</p>
 <p>	Rangler	V2	</p>
+<p>	Inside Out	V2	</p>
+<p>	Contraband	V2	</p>
+<p>	Close Shave	V2	</p>
 <p>	Mother Neature	V2	</p>
 <p>	No Flakes Given	V2	</p>
 <p>	Dick Leakage	V2	</p>
 <p>	Hand Jive	V2	</p>
+<p>	Bad Llama	V2	</p>
 <p>	Wheat Thin	V2-3	</p>
 <p>	Mindfullness	V3	</p>
+<p>	Predator	V3	</p>
 <p>	Nasal Cavity (Jump Start)	V3	</p>
 <p>	Crown of Thorns	V3	</p>
 <p>	Puppet Master	V3	</p>
@@ -107,8 +122,9 @@
 <p>	First Time	V3	</p>
 <p>	Grease Monkey	V3	</p>
 <p>	Slo-Mo	V4	</p>
-<p>	Number  1 OW	V4	</p>
+<p>	Number 1 OW	V4	</p>
 <p>	Crown Jewel	V4	</p>
+<p>	Versatility	V4	</p>
 <p>	Stairway to Heaven	V4	</p>
 <p> Standing Ovation V4 </p>
 <p>	Tsunami	V4	</p>
@@ -127,6 +143,7 @@
 <p>	Pop Rocks	V4	</p>
 <p>	Muay Thai Friday	V4	</p>
 <p>	Crown Traverse	V4	</p>
+<p>	MV Problem	V4	</p>
 <p>	Sidewinder	V4	</p>
 <p>	Deviated Septum	V4-5	</p>
 <p>	Locked and Loaded	V5	</p>
@@ -143,6 +160,7 @@
 <p>	Every Coyote	V5	</p>
 <p>	The Flake of Destiny	V5	</p>
 <p>	Glove Knee	V5	</p>
+<p>	Clockwork Red	V5	</p>
 <p>	Undertow	V5-6	</p>
 <p>	Table Dance	V6	</p>
 <p>	Black Wall	V6	</p>
