Add new climbing routes to pimaclimbs.html

--- a/html/azcrags/pimaclimbs.html
+++ b/html/azcrags/pimaclimbs.html
@@ -31,6 +31,7 @@
 <p>	Camel Toes	V0	</p>
 <p>	Suspended Animation	V0	</p>
 <p>	Proud Line	V0	</p>
+<p>	Horney Toad	V0	</p>
 <p>	Varicose Vein	V0	</p>
 <p>	Lost	V0	</p>
 <p>	Walking Tall	V0	</p>
@@ -38,9 +39,14 @@
 <p>	The Librarian	V0	</p>
 <p>	Cowgirl Sex	V0	</p>
 <p>	Cowboy Sex	V0	</p>
+<p>	Jug Head	V0	</p>
 <p>	Finger Food	V0	</p>
+<p>	Leftovers	V0	</p>
+<p>	Tom Sawyer	V0	</p>
+<p>	31 Flavors	V0	</p>
 <p>	No Limits	V0	</p>
 <p>	Spindrift	V0	</p>
+<p>	One Way Out	V0	</p>
 <p>	Honduran	V0	</p>
 <p>	Wrong Place, Wrong Time	V0	</p>
 <p>	Surrealism on Acid	V0	</p>
@@ -66,7 +72,10 @@
 <p>	Simple Solution	V1	</p>
 <p>	Flippin the Bitch	V1	</p>
 <p>	Pinch Hitter	V1	</p>
+<p>	The Gnome	V1	</p>
+<p>	Desperation Alley	V1	</p>
 <p>	Snap Crackle Pop	V1	</p>
+<p>	Huckleberry Thin	V1	</p>
 <p>	3 D's Are Better Than 2	V1	</p>
 <p>	Gaurdian Of The Canvas	V1	</p>
 <p> Dilbert Unleashed	V0	</p>
@@ -109,6 +118,7 @@
 <p>	Two Scoops	V3	</p>
 <p>	Projected	V3	</p>
 <p>	Side Salad	V3	</p>
+<p>	Trick Or Treat	V3	</p>
 <p>	South America V3	</p>
 <p> Washed Out V3 </p>
 <p> Iguana Head V3 </p>
@@ -151,6 +161,8 @@
 <p>	Wheat Thin-er (Sit Start)	V5	</p>
 <p>	Double Fisted	V5	</p>
 <p>	Fisticuffs	V5	</p>
+<p>	The Captain	V5	</p>
+<p>	Tenille	V5	</p>
 <p>	Table Topper	V5	</p>
 <p>	Seven Samurai	V5	</p>
 <p>	Shards Of Narsil	V5	</p>
