Revise Pima Punisher goals and problem count
Updated the climbing goal details and problem count.

--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -19,7 +19,7 @@
 <p>maybe not the hustle, but thatd be cool</p>
 
 <a href="/html/azcrags/pimaclimbs.html">
-	<h2>Complete List: 120 problems & 2 Routes</h2>
+	<h2>Complete List: 181 problems + 2 Routes + 5 Projects</h2>
 </a>
 
 <h2>climbs by date</h2>
@@ -30,6 +30,7 @@
 </center>
 
  </html>
+
 
 
 
