--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -15,7 +15,7 @@
 
 <h1>The Pima Punisher Total List!</h1>
 <style>h1 {text-decoration: underline;}</style>
-<p>"f:Flash #s:Burns Before Send V#: My Grade"</p>
+<p>"(f:Flash)   (#s:Burns Before Send)   (V#: My Grade)"</p>
 
 <h2>Problems</h2>
 <p>	Sharks Tooth	VE	</p>
