--- a/html/azcrags.html
+++ b/html/azcrags.html
@@ -30,7 +30,11 @@
 </a>
 <h2>deep in somo (under development)</h2>
 <br>
- 
+ <a href="/html/azcrags/Pima.html">
+<img src="/images/crags/pima.jpg" alt="logo" style="width:400px;height:400px;">
+</a>
+<h2>Pima Wash</h2>
+<br>
 
 
 
@@ -38,6 +42,7 @@
 </center>
 
  </html>
+
 
 
 
