--- a/html/azcrags/pimaclimbs.html
+++ b/html/azcrags/pimaclimbs.html
@@ -13,7 +13,7 @@
 </div>
 <center>
 
-<h1>The Pima Punisher Total List!</h1>
+<h1>The Pima Total List!</h1>
 <style>h1 {text-decoration: underline;}</style>
 
 <h2>Problems</h2>
