Update problem count in pima.html

--- a/html/azcrags/pima.html
+++ b/html/azcrags/pima.html
@@ -17,7 +17,7 @@
 
 
 <a href="/html/azcrags/pimaclimbs.html">
-	<h2>Complete List: 120 problems & 2 Routes</h2>
+	<h2>Complete List: 181 Problems + 2 Routes + 5 Projects</h2>
 </a>
 
  </center>
