Update index.html with new project links
Added links to projects and updated image paths.

--- a/index.html
+++ b/index.html
@@ -46,18 +46,22 @@
 <h2>Click Here! for Climbing stuff</h2><br>
 
 
-<a href="/html/trips.html">
+<a href="/html/trips/trips.html">
 	<img src="/images/earth.PNG" alt="logo" style="width:500px;height:500px;">
 </a>
 <h2>Investigating around the Globe</h2><br>
 
  
-
+<a href="/html/projects/projects.html">
+	<img src="/images/tools.png" alt="logo" style="width:840px;height:535px;">
+</a>
+<h2>Projects I do</h2><br>
 
 
 
 </center>
  </html>
+
 
 
 
