Fix HTML structure and update image sources

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
  
 <a href="/html/projects/projects.html">
-	<img src="/images/tool.png" alt="logo" style="width:840px;height:535px;">
+	<img src="/images/tools.png" alt="logo" style="width:500px;height:500px;">
 </a>
 <h2>Projects I do</h2><br>
 
@@ -61,6 +61,7 @@
 
 </center>
  </html>
+
 
 
 
