--- a/html/climbing.html
+++ b/html/climbing.html
@@ -19,6 +19,13 @@
 
 <br>
 
+<a href="/html/training.html">
+	<img src="/images/training.jpg" alt="logo" style="width:400px;height:400px;">
+</a>
+<h2>Climbing Training</h2>
+
+<br>
+
 <a href="/html/trs.html">
 	<img src="/images/trs.png" alt="logo" style="width:430px;height:892px;">
 </a>
@@ -34,6 +41,7 @@
 <br>
 </center>
 </html>
+
 
 
 
