--- a/html/trips/trips.html
+++ b/html/trips/trips.html
@@ -10,22 +10,13 @@
 <div class="top-left-text">
     <a href="/html/redirect.html">Help! Im Lost</a>
 </div>
- <body style="background-color: black;">
 <center>
 
-<h1 style="color: teal;">TRS Gear Guide and Experiments</h1>
+<h1 style="color: teal;">Trips Round the World and Around Home</h1>
 <style>h1 {text-decoration: underline;}</style>
-
-
-<img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
-<p style="color: teal;">Typical Gear Setup</p>
-
-<br>
-
-<img src="/images/pdraw_map.png" alt="logo" style="width:500px;height:510px;">
-<p style="color: teal;">Gear/Scenario Experiments</p>
 
  </body>
 </center>
 </html>
+
 
