--- a/html/projects/projects.html
+++ b/html/projects/projects.html
@@ -12,11 +12,12 @@
 </div>
 <center>
 
-<h1 style="color: teal;">Crafts and Repairs</h1>
+<h1>Projects, Crafts, and Repairs</h1>
 <style>h1 {text-decoration: underline;}</style>
 
  </body>
 </center>
 </html>
+
 
 
