--- a/html/trips/trips.html
+++ b/html/trips/trips.html
@@ -12,11 +12,12 @@
 </div>
 <center>
 
-<h1 style="color: teal;">Trips Round the World and Around Home</h1>
+<h1>Trips Round the World and Around Home</h1>
 <style>h1 {text-decoration: underline;}</style>
 
  </body>
 </center>
 </html>
+
 
 
