--- a/html/training.html
+++ b/html/training.html
@@ -13,7 +13,7 @@
 
 <center>
 
-<h1>Clibing Training (Mainly Strength Lists)</h1>
+<h1>Climbing Training (Mainly Strength Lists)</h1>
 <style>h1 {text-decoration: underline;}</style>
 
  </body>
