Modify climbing.html to add new crag image
Updated the climbing page to include a new image link for Arizona climbing crags.

--- a/html/climbing.html
+++ b/html/climbing.html
@@ -12,6 +12,13 @@
 
 <br>
 
+<a href="/html/cacrags.html">
+	<img src="/images/camap.png" alt="logo" style="width:400px;height:684px;">
+</a>
+<h2>Arizona Climbing Crags</h2>
+
+<br>
+
 <a href="/html/2026goals.html">
 	<img src="/images/2026.jpg" alt="logo" style="width:400px;height:270px;">
 </a>
@@ -41,6 +48,7 @@
 <br>
 </center>
 </html>
+
 
 
 
