Update climbing page for California crags

--- a/html/climbing.html
+++ b/html/climbing.html
@@ -15,7 +15,7 @@
 <a href="/html/cacrags.html">
 	<img src="/images/camap.png" alt="logo" style="width:400px;height:684px;">
 </a>
-<h2>Arizona Climbing Crags</h2>
+<h2>California Climbing Crags</h2>
 
 <br>
 
@@ -48,6 +48,7 @@
 <br>
 </center>
 </html>
+
 
 
 
